--- a/scss/style.css
+++ b/scss/style.css
@@ -6,7 +6,7 @@
  * License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
  */
 @font-face {
-  font-family: 'icomoon';
+  font-family: 'prompt';
   src: url("../fonts/icomoon/fonts/icomoon.eot?1z9v6x");
   src: url("../fonts/icomoon/fonts/icomoon.eot?1z9v6x#iefix") format("embedded-opentype"), url("../fonts/icomoon/fonts/icomoon.ttf?1z9v6x") format("truetype"), url("../fonts/icomoon/fonts/icomoon.woff?1z9v6x") format("woff"), url("../fonts/icomoon/fonts/icomoon.svg?1z9v6x#icomoon") format("svg");
   font-weight: normal;
@@ -23,7 +23,7 @@ body {
   color: #73767c;
   line-height: 1.7;
   font-size: 16px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Prompt", Arial, sans-serif;
 }
 
 ::-moz-selection {
@@ -156,7 +156,7 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-navbar .dropdown > a:before {
-  font-family: 'icomoon';
+  font-family: 'prompt';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -261,7 +261,7 @@ a:hover, a:focus, a:active {
 
 .probootstrap-navbar .navbar-brand {
   text-transform: uppercase;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Prompt", Arial, sans-serif;
   color: #ffffff;
   font-size: 26px;
   font-weight: 700;
@@ -281,7 +281,7 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-navbar .navbar-brand em {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Prompt", Arial, sans-serif;
 }
 
 .probootstrap-navbar .navbar-nav > li > a {
@@ -380,7 +380,7 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-navbar .dropdown-submenu > a:before {
-  font-family: 'icomoon';
+  font-family: 'prompt';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -732,7 +732,7 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-list li:before {
-  font-family: 'icomoon';
+  font-family: 'prompt';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -763,7 +763,7 @@ a:hover, a:focus, a:active {
 }
 
 .probootstrap-check-2:before {
-  font-family: 'icomoon';
+  font-family: 'prompt';
   speak: none;
   font-style: normal;
   font-weight: normal;
